Fixed bug #30061 (xml_set_start_namespace_decl_handler not called) hopefully resolve a bunch of entity issues

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@172975 c90b9560-bf6c-de11-be94-00142212c4b1